[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
etherparse = "0.13.0"
socket2 = { version = "0.5.1", features = ["all"] }

[profile.release]
opt-level = "s"
debug = 0
split-debuginfo = "packed"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false